optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_use_server_mount.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useTask$, useStore, useStyles$ } from '@qwik.dev/core';
import mongo from 'mongodb';
import redis from 'redis';

export const Parent = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		state.text = await mongo.users();
		redis.set(state.text);
	});

	return (
		<div onClick$={() => console.log('parent')}>
			{state.text}
		</div>
	);
});

export const Child = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		state.text = await mongo.users();
	});

	return (
		<div onClick$={() => console.log('child')}>
			{state.text}
		</div>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_SX4UNdoumFY = ()=>import("./test.tsx_Parent_component_useTask_SX4UNdoumFY");
const i_fxETLug1yE4 = ()=>import("./test.tsx_Parent_component_fxETLug1yE4");
const i_ScyES0tAh7c = ()=>import("./test.tsx_Child_component_useTask_ScyES0tAh7c");
const i_80js9RUUsfM = ()=>import("./test.tsx_Child_component_80js9RUUsfM");
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_fxETLug1yE4, "Parent_component_fxETLug1yE4"));
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_80js9RUUsfM, "Child_component_80js9RUUsfM"));


None
============================= test.tsx_Parent_component_fxETLug1yE4.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
const i_SX4UNdoumFY = ()=>import("./test.tsx_Parent_component_useTask_SX4UNdoumFY");
export const Parent_component_fxETLug1yE4 = ()=>{
	const state = useStore({ text: "" });
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_SX4UNdoumFY, "Parent_component_useTask_SX4UNdoumFY", [state]));
	return /*#__PURE__*/ _jsxSorted("div", { on:click: /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_SX4UNdoumFY, "Parent_component_useTask_SX4UNdoumFY", [state])) }, null, state.text, 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_fxETLug1yE4",
  "entry": "./test.tsx_entry_Parent",
  "displayName": "test.tsx_Parent_component",
  "hash": "fxETLug1yE4",
  "canonicalFilename": "test.tsx_Parent_component_fxETLug1yE4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    167,
    419
  ]
}
*/
============================= test.tsx_Parent_component_useTask_SX4UNdoumFY.js (ENTRY POINT)==

import mongo from "mongodb";
import redis from "redis";
export const Parent_component_useTask_SX4UNdoumFY = async ()=>{
	const [state] = useLexicalScope();
	state.text = await mongo.users();
	redis.set(state.text);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_useTask_SX4UNdoumFY",
  "entry": "./test.tsx_entry_Parent",
  "displayName": "test.tsx_Parent_component_useTask",
  "hash": "SX4UNdoumFY",
  "canonicalFilename": "test.tsx_Parent_component_useTask_SX4UNdoumFY",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    251,
    328
  ]
}
*/
============================= test.tsx_Child_component_useTask_ScyES0tAh7c.js (ENTRY POINT)==

import mongo from "mongodb";
export const Child_component_useTask_ScyES0tAh7c = async ()=>{
	const [state] = useLexicalScope();
	state.text = await mongo.users();
};


None
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useTask_ScyES0tAh7c",
  "entry": "./test.tsx_entry_Parent",
  "displayName": "test.tsx_Child_component_useTask",
  "hash": "ScyES0tAh7c",
  "canonicalFilename": "test.tsx_Child_component_useTask_ScyES0tAh7c",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    539,
    591
  ]
}
*/
============================= test.tsx_Child_component_80js9RUUsfM.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
const i_ScyES0tAh7c = ()=>import("./test.tsx_Child_component_useTask_ScyES0tAh7c");
export const Child_component_80js9RUUsfM = ()=>{
	const state = useStore({ text: "" });
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_ScyES0tAh7c, "Child_component_useTask_ScyES0tAh7c", [state]));
	return /*#__PURE__*/ _jsxSorted("div", { on:click: /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_ScyES0tAh7c, "Child_component_useTask_ScyES0tAh7c", [state])) }, null, state.text, 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Child_component_80js9RUUsfM",
  "entry": "./test.tsx_entry_Parent",
  "displayName": "test.tsx_Child_component",
  "hash": "80js9RUUsfM",
  "canonicalFilename": "test.tsx_Child_component_80js9RUUsfM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    455,
    681
  ]
}
*/
== DIAGNOSTICS ==

[]
