optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_with_style.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStyles$ } from '@qwik.dev/core';

export const Foo = component$(() => {
	useStyles$('.class {}');
	return (
		<div class="class"/>
	);
}, {
	tagName: "my-foo",
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_JG9QnIkplMk = ()=>import("./test.tsx_Foo_component_useStyles_JG9QnIkplMk");
const i_gZqPatVoDqw = ()=>import("./test.tsx_Foo_component_gZqPatVoDqw");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_gZqPatVoDqw, "Foo_component_gZqPatVoDqw"));


None
============================= test.tsx_Foo_component_gZqPatVoDqw.tsx (ENTRY POINT)==

import { qrl, useStylesQrl } from "@qwik.dev/core";
export const Foo_component_gZqPatVoDqw = ()=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_JG9QnIkplMk, "Foo_component_useStyles_JG9QnIkplMk"));
	return <div class="class" />;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_gZqPatVoDqw",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "gZqPatVoDqw",
  "canonicalFilename": "test.tsx_Foo_component_gZqPatVoDqw",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    91,
    163
  ]
}
*/
============================= test.tsx_Foo_component_useStyles_JG9QnIkplMk.tsx (ENTRY POINT)==

export const Foo_component_useStyles_JG9QnIkplMk = ".class {}";


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_useStyles_JG9QnIkplMk",
  "entry": null,
  "displayName": "test.tsx_Foo_component_useStyles",
  "hash": "JG9QnIkplMk",
  "canonicalFilename": "test.tsx_Foo_component_useStyles_JG9QnIkplMk",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    111,
    122
  ]
}
*/
== DIAGNOSTICS ==

[]
