optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_with_tagname.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';

export const Foo = component$(() => {
	return $(() => {
		return (
			<div>
			</div>
		)
	});
}, {
	tagName: "my-foo",
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_oqxj4pNYHWI = ()=>import("./test.tsx_Foo_component_1_oqxj4pNYHWI");
const i_gZqPatVoDqw = ()=>import("./test.tsx_Foo_component_gZqPatVoDqw");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_gZqPatVoDqw, "Foo_component_gZqPatVoDqw"));


None
============================= test.tsx_Foo_component_1_oqxj4pNYHWI.tsx (ENTRY POINT)==

export const Foo_component_1_oqxj4pNYHWI = ()=>{
	return <div>
			</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_oqxj4pNYHWI",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "oqxj4pNYHWI",
  "canonicalFilename": "test.tsx_Foo_component_1_oqxj4pNYHWI",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    97,
    141
  ]
}
*/
============================= test.tsx_Foo_component_gZqPatVoDqw.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const Foo_component_gZqPatVoDqw = ()=>{
	return /*#__PURE__*/ qrl(i_oqxj4pNYHWI, "Foo_component_1_oqxj4pNYHWI");
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_gZqPatVoDqw",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "gZqPatVoDqw",
  "canonicalFilename": "test.tsx_Foo_component_gZqPatVoDqw",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    145
  ]
}
*/
== DIAGNOSTICS ==

[]
