optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_issue_150.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
import { hola } from 'sdfds';

export const Greeter = component$(() => {
	const stuff = useStore();
	return $(() => {
		return (
			<div
				class={{
					'foo': true,
					'bar': stuff.condition,
					'baz': hola ? 'true' : 'false',
				}}
			/>
		)
	});
});

const d = $(()=>console.log('thing'));

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_1ls8aZb0sd4 = ()=>import("./test.tsx_Greeter_component_1_1ls8aZb0sd4");
const i_l5Al0251s9w = ()=>import("./test.tsx_Greeter_component_l5Al0251s9w");
const i_j0uXtsz0eLE = ()=>import("./test.tsx_d_j0uXtsz0eLE");
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_l5Al0251s9w, "Greeter_component_l5Al0251s9w"));
/*#__PURE__*/ qrl(i_j0uXtsz0eLE, "d_j0uXtsz0eLE");


None
============================= test.tsx_d_j0uXtsz0eLE.js (ENTRY POINT)==

export const d_j0uXtsz0eLE = ()=>console.log("thing");


None
/*
{
  "origin": "test.tsx",
  "name": "d_j0uXtsz0eLE",
  "entry": null,
  "displayName": "test.tsx_d",
  "hash": "j0uXtsz0eLE",
  "canonicalFilename": "test.tsx_d_j0uXtsz0eLE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    321,
    345
  ]
}
*/
============================= test.tsx_Greeter_component_l5Al0251s9w.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const Greeter_component_l5Al0251s9w = ()=>{
	const stuff = useStore();
	return /*#__PURE__*/ qrl(i_1ls8aZb0sd4, "Greeter_component_1_1ls8aZb0sd4", [stuff]);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_l5Al0251s9w",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "l5Al0251s9w",
  "canonicalFilename": "test.tsx_Greeter_component_l5Al0251s9w",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    113,
    305
  ]
}
*/
============================= test.tsx_Greeter_component_1_1ls8aZb0sd4.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { hola } from "sdfds";
export const Greeter_component_1_1ls8aZb0sd4 = ()=>{
	const [stuff] = useLexicalScope();
	return /*#__PURE__*/ _jsxSorted("div", { class: {
		"foo": true,
		"bar": stuff.condition,
		"baz": hola ? "true" : "false"
	} }, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_1_1ls8aZb0sd4",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_1",
  "hash": "1ls8aZb0sd4",
  "canonicalFilename": "test.tsx_Greeter_component_1_1ls8aZb0sd4",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    158,
    301
  ]
}
*/
== DIAGNOSTICS ==

[]
