optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_issue_476.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { Counter } from "./counter.tsx";

export const Root = () => {
	return (
		<html>
			<head>
				<meta charset="utf-8" />
				<title>Qwik Blank App</title>
			</head>
			<body>
				<Counter initial={3} />
			</body>
		</html>
	);
};

============================= test.tsx ==

import { Counter } from "./counter.tsx";
import { Counter } from "./counter.tsx";
export const Root = ()=>{
	return <html>
			<head>
				<meta charset="utf-8" />
				<title>Qwik Blank App</title>
			</head>
			<body>
				<Counter initial={3} />
			</body>
		</html>;
};


None
== DIAGNOSTICS ==

[]
