optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_issue_7216_add_test.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@builder.io/qwik';
export default component$((props) => {
  return (<p 
		onHi$={() => 'hi'} 
		{...props.foo} 
		onHello$={props.helloHandler$} 
		{...props.rest} 
		onVar$={props.onVarHandler$} 
		onConst$={() => 'const'} 
		asd={"1"}
	/>);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_G7jVUwdBFEM = ()=>import("./test.tsx_test.tsx_component_G7jVUwdBFEM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "test.tsx_component_G7jVUwdBFEM"));


None
============================= test.tsx_test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { _getConstProps, _getVarProps, _jsxSplit, qrl } from "@qwik.dev/core";
const i_onConst = ()=>import("./test.tsx");
const i_onHi = ()=>import("./test.tsx");
export const test.tsx_component_G7jVUwdBFEM = (props)=>{
	return /*#__PURE__*/ _jsxSplit("p", {
		on:hi: /*#__PURE__*/ qrl(i_onHi, "component_p_onHi"),
		..._getVarProps(props.foo),
		on:hello: props.helloHandler$,
		..._getVarProps(props.rest),
		on:var: props.onVarHandler$,
		on:const: /*#__PURE__*/ qrl(i_onConst, "component_p_onConst"),
		asd: "1"
	}, _getConstProps(props.rest), null, 0, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    272
  ]
}
*/
== DIAGNOSTICS ==

[]
