optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_issue_964.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const App = component$(() => {
	console.log(function*(lo: any, t: any) {
	console.log(yield (yield lo)(t.href).then((r) => r.json()));
	});

	return <p>Hello Qwik</p>;
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_XumqEURaLxI = ()=>import("./test.tsx_App_component_XumqEURaLxI");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));


None
============================= test.tsx_App_component_XumqEURaLxI.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const App_component_XumqEURaLxI = ()=>{
	console.log(function* (lo, t) {
		console.log(yield (yield lo)(t.href).then((r)=>r.json()));
	});
	return /*#__PURE__*/ _jsxSorted("p", null, null, "Hello Qwik", 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    222
  ]
}
*/
== DIAGNOSTICS ==

[]
