optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_lib_mode_fn_signal.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
export const Counter = component$(() => {
	const count = useSignal(0);

	return (
		<div>
			<p>Count: {count.value}</p>
			<p>
				<button onClick$={() => count.value++}>Increment</button>
			</p>
		</div>
	);
});

============================= test.tsx_Counter_component_zTmRHlL09Gg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./test.tsx");
export const Counter_component_zTmRHlL09Gg = ()=>{
	const count = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", null, null, [/*#__PURE__*/ _jsxSorted("p", null, null, ["Count:", _wrapProp(count)], 1, null), /*#__PURE__*/ _jsxSorted("p", null, null, /*#__PURE__*/ _jsxSorted("button", { "on:click": /*#__PURE__*/ qrl(i_onClick, "Counter_component_div_p_button_onClick", [count]) }, null, "Increment", 3, null), 3, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Counter_component_zTmRHlL09Gg",
  "entry": null,
  "displayName": "test.tsx_Counter_component",
  "hash": "zTmRHlL09Gg",
  "canonicalFilename": "test.tsx_Counter_component_zTmRHlL09Gg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    257
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_zTmRHlL09Gg = ()=>import("./test.tsx_Counter_component_zTmRHlL09Gg");
export const Counter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_zTmRHlL09Gg, "Counter_component_zTmRHlL09Gg"));


None
== DIAGNOSTICS ==

[]
