optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_relative_paths.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
import { state } from './sibling';

export const Local = component$(() => {
	return (
		<div>{state}</div>
	)
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_wppfsQtfSsw = ()=>import("./test.tsx_Local_component_wppfsQtfSsw");
export const Local = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_wppfsQtfSsw, "Local_component_wppfsQtfSsw"));


None
============================= test.tsx_Local_component_wppfsQtfSsw.js (ENTRY POINT)==

import { state } from "./sibling";
import { _jsxSorted } from "@qwik.dev/core";
export const Local_component_wppfsQtfSsw = ()=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, state, 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Local_component_wppfsQtfSsw",
  "entry": null,
  "displayName": "test.tsx_Local_component",
  "hash": "wppfsQtfSsw",
  "canonicalFilename": "test.tsx_Local_component_wppfsQtfSsw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    116,
    159
  ]
}
*/
== DIAGNOSTICS ==

[]
